# MES_midex_mvp

./: .env.example  .env.production  .env.staging  .gitignore  .template-config.yaml  README.md  README.ru.md  TESTING_REPORT.md  TESTING_SUMMARY.md  TEST_RUN_GUIDE.md  branches.txt  deployment.sh  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.yml  estimated_phase2.txt  estimated_phase3.txt  git_history.txt  jan25_now_commits.txt  localhost_dsiz_files.txt  localhost_git_status.txt  phase1_commits.txt  tags.txt
backend/: .env.production  Dockerfile  Dockerfile.production  alembic.ini  pyproject.toml  test_refactoring.py
backend/config/: __init__.py  factory_config.py
backend/core/: priority_utils.py
backend/core/models/: __init__.py  batch.py  bill_of_material.py  genealogy_record.py  inventory_balance.py  manufacturing_order.py  manufacturing_route.py  order_snapshot.py  product.py  product_routing_rule.py  production_task.py  quality_inspection.py  route_operation.py  work_center.py  work_center_capacity.py
backend/core/routes/: batches.py  bom.py  dev.py  dispatch.py  dispatching.py  health.py  inventory.py  manufacturing_routes.py  mrp.py  operations.py  orders.py  products.py  strategic_planning.py  tasks.py  validation.py  work_center_capacities.py  work_centers.py
backend/core/schemas/: __init__.py  batch.py  bom.py  dispatching.py  inventory.py  (+8 more)
backend/customizations/: README.md  __init__.py
backend/src/: main.py
backend/tests/: README.md  conftest.py  test_api_integration.py  test_order_service.py  test_task_service.py
(+379 files in other folders)
